# ageofclaritas-webapp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose-devcontainer.yml
_docker/postgres/: Dockerfile  webapp-init.sql
_docker/webapp/: Dockerfile  startup-dev.sh
accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_is_student_and_more.py  0002_waiver_profile_birthday_profile_is_minor_and_more.py  0003_alter_customuser_parent_account.py  0003_alter_waiver_effective_date.py  0004_alter_waiver_options.py  0005_alter_profile_birthday.py  0006_alter_profile_birthday.py  0007_rename_birthday_profile_date_of_birth_and_more.py
age-of-claritas-webapp/: .gitignore  db.sqlite3  pyproject.toml
age-of-claritas-webapp/rulebook/: models.py
ageofclaritas/: asgi.py  settings.py  urls.py  wsgi.py
core/: urls.py  views.py
docs/: System Map.md  registration-state-diagram.mmd  sitemap.mmd
docs/class-diagrams/: accounts-models.mmd  events-models.mmd  payments-models.mmd  rulebook-models.mmd  surveys-models.mmd
events/: admin.py  forms.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_alter_event_downtime_due_alter_survey_event_and_more.py  0002_alter_eventattendee_arrival_time.py  0002_remove_event_background_image_event_event_image_and_more.py  0002_remove_eventregistration_payment_status_and_more.py  0003_remove_event_attendees_eventattendee_and_more.py  0003_remove_eventregistration_arrival_time_and_more.py  0004_remove_eventregistration_order.py  (+19 more)
nginx/: default.conf
payments/: admin.py  models.py  urls.py  views.py
rulebook/: admin.py  apps.py  models.py  urls.py  views.py
surveys/: admin.py  models.py
templates/: base.html  base_footer.html  base_head.html  base_nav.html
(+97 files in other folders)
